@@ -15,6 +15,8 @@ not yet  BJH  Release 10.52.00
 
               Build: don't fail due to SIGRTMIN, SIGRTMAX being undefined.
 
+              Build: don't expect snprintf() to exist.
+
 10.06.27 BJH  Release 10.51.00
 
               Add ppmtoascii.  Thanks "Frank Ch. Eigler" <fche@elastic.org>.
